third_party/move/move-compiler-v2/tests/reference-safety/v1-tests/borrow_field_full_invalid.exp

Diagnostics:
error: cannot immutably borrow local `inner` since other mutable references exist
   ┌─ tests/reference-safety/v1-tests/borrow_field_full_invalid.move:23:18
   │
22 │         let c = id_mut(inner);
   │                 ------------- previous mutable call result
23 │         let f1 = &inner.f1;
   │                  ^^^^^^^^^ immutable borrow attempted here

error: cannot dereference local `inner` which is still mutable borrowed
   ┌─ tests/reference-safety/v1-tests/borrow_field_full_invalid.move:25:9
   │
22 │         let c = id_mut(inner);
   │                 ------------- previous mutable call result
   ·
25 │         *inner;
   │         ^^^^^^ dereferenced here

error: cannot dereference local `inner` which is still mutable borrowed
   ┌─ tests/reference-safety/v1-tests/borrow_field_full_invalid.move:27:9
   │
22 │         let c = id_mut(inner);
   │                 ------------- previous mutable call result
   ·
27 │         *inner;
   │         ^^^^^^ dereferenced here

error: cannot dereference local `c` which is still mutable borrowed
   ┌─ tests/reference-safety/v1-tests/borrow_field_full_invalid.move:33:9
   │
32 │         let f1 = &mut inner.f1;
   │                  ------------- previous mutable field borrow
33 │         *c;
   │         ^^ dereferenced here

error: cannot dereference local `inner` which is still mutable borrowed
   ┌─ tests/reference-safety/v1-tests/borrow_field_full_invalid.move:34:9
   │
32 │         let f1 = &mut inner.f1;
   │                  ------------- previous mutable field borrow
33 │         *c;
34 │         *inner;
   │         ^^^^^^ dereferenced here

error: cannot mutably borrow local `inner` since other references exists
   ┌─ tests/reference-safety/v1-tests/borrow_field_full_invalid.move:41:18
   │
40 │         let c = id_mut(inner);
   │                 ------------- previous mutable call result
41 │         let f1 = &mut inner.f1;
   │                  ^^^^^^^^^^^^^ mutable borrow attempted here

error: cannot dereference local `inner` which is still mutable borrowed
   ┌─ tests/reference-safety/v1-tests/borrow_field_full_invalid.move:43:9
   │
40 │         let c = id_mut(inner);
   │                 ------------- previous mutable call result
41 │         let f1 = &mut inner.f1;
   │                  ------------- previous mutable field borrow
42 │         *c;
43 │         *inner;
   │         ^^^^^^ dereferenced here

error: cannot dereference local `inner` which is still mutable borrowed
   ┌─ tests/reference-safety/v1-tests/borrow_field_full_invalid.move:45:9
   │
40 │         let c = id_mut(inner);
   │                 ------------- previous mutable call result
   ·
45 │         *inner;
   │         ^^^^^^ dereferenced here
